crest-0.1.1/src/nbproject/private/Default-build.log
g++ -I. -I/home/subhajit/tools/yices/yices-1.0.39/include -Wall -O2   -c -o libcrest/crest.o libcrest/crest.cc
In file included from /usr/include/c++/6.3.1/ext/hash_map:60:0,
                 from ./base/symbolic_interpreter.h:16,
                 from libcrest/crest.cc:16:
/usr/include/c++/6.3.1/backward/backward_warning.h:32:2: warning: #warning This file includes at least one deprecated or antiquated header which may be removed without further notice at a future date. Please use a non-deprecated interface with equivalent functionality instead. For a listing of replacement headers and interfaces, consult the file backward_warning.h. To disable this warning use -Wno-deprecated. [-Wcpp]
 #warning \
  ^~~~~~~
In file included from libcrest/crest.cc:17:0:
./libcrest/crest.h:136:1: warning: ‘typedef’ was ignored in this declaration
 typedef enum {
 ^~~~~~~
./libcrest/crest.h:171:42: warning: ‘crest_skip’ attribute directive ignored [-Wattributes]
 #define __SKIP __attribute__((crest_skip))
                                          ^
./libcrest/crest.h:176:27: note: in expansion of macro ‘__SKIP’
 EXTERN void __CrestInit() __SKIP;
                           ^~~~~~
./libcrest/crest.h:171:42: warning: ‘crest_skip’ attribute directive ignored [-Wattributes]
 #define __SKIP __attribute__((crest_skip))
                                          ^
./libcrest/crest.h:177:66: note: in expansion of macro ‘__SKIP’
 EXTERN void __CrestLoad(__CREST_ID, __CREST_ADDR, __CREST_VALUE) __SKIP;
                                                                  ^~~~~~
./libcrest/crest.h:171:42: warning: ‘crest_skip’ attribute directive ignored [-Wattributes]
 #define __SKIP __attribute__((crest_skip))
                                          ^
./libcrest/crest.h:178:52: note: in expansion of macro ‘__SKIP’
 EXTERN void __CrestStore(__CREST_ID, __CREST_ADDR) __SKIP;
                                                    ^~~~~~
./libcrest/crest.h:171:42: warning: ‘crest_skip’ attribute directive ignored [-Wattributes]
 #define __SKIP __attribute__((crest_skip))
                                          ^
./libcrest/crest.h:179:43: note: in expansion of macro ‘__SKIP’
 EXTERN void __CrestClearStack(__CREST_ID) __SKIP;
                                           ^~~~~~
./libcrest/crest.h:171:42: warning: ‘crest_skip’ attribute directive ignored [-Wattributes]
 #define __SKIP __attribute__((crest_skip))
                                          ^
./libcrest/crest.h:180:66: note: in expansion of macro ‘__SKIP’
 EXTERN void __CrestApply1(__CREST_ID, __CREST_OP, __CREST_VALUE) __SKIP;
                                                                  ^~~~~~
./libcrest/crest.h:171:42: warning: ‘crest_skip’ attribute directive ignored [-Wattributes]
 #define __SKIP __attribute__((crest_skip))
                                          ^
./libcrest/crest.h:181:66: note: in expansion of macro ‘__SKIP’
 EXTERN void __CrestApply2(__CREST_ID, __CREST_OP, __CREST_VALUE) __SKIP;
                                                                  ^~~~~~
./libcrest/crest.h:171:42: warning: ‘crest_skip’ attribute directive ignored [-Wattributes]
 #define __SKIP __attribute__((crest_skip))
                                          ^
./libcrest/crest.h:182:72: note: in expansion of macro ‘__SKIP’
 EXTERN void __CrestBranch(__CREST_ID, __CREST_BRANCH_ID, __CREST_BOOL) __SKIP;
                                                                        ^~~~~~
./libcrest/crest.h:171:42: warning: ‘crest_skip’ attribute directive ignored [-Wattributes]
 #define __SKIP __attribute__((crest_skip))
                                          ^
./libcrest/crest.h:183:58: note: in expansion of macro ‘__SKIP’
 EXTERN void __CrestCall(__CREST_ID, __CREST_FUNCTION_ID) __SKIP;
                                                          ^~~~~~
./libcrest/crest.h:171:42: warning: ‘crest_skip’ attribute directive ignored [-Wattributes]
 #define __SKIP __attribute__((crest_skip))
                                          ^
./libcrest/crest.h:184:39: note: in expansion of macro ‘__SKIP’
 EXTERN void __CrestReturn(__CREST_ID) __SKIP;
                                       ^~~~~~
./libcrest/crest.h:171:42: warning: ‘crest_skip’ attribute directive ignored [-Wattributes]
 #define __SKIP __attribute__((crest_skip))
                                          ^
./libcrest/crest.h:185:60: note: in expansion of macro ‘__SKIP’
 EXTERN void __CrestHandleReturn(__CREST_ID, __CREST_VALUE) __SKIP;
                                                            ^~~~~~
./libcrest/crest.h:171:42: warning: ‘crest_skip’ attribute directive ignored [-Wattributes]
 #define __SKIP __attribute__((crest_skip))
                                          ^
./libcrest/crest.h:197:44: note: in expansion of macro ‘__SKIP’
 EXTERN void __CrestUChar(unsigned char* x) __SKIP;
                                            ^~~~~~
./libcrest/crest.h:171:42: warning: ‘crest_skip’ attribute directive ignored [-Wattributes]
 #define __SKIP __attribute__((crest_skip))
                                          ^
./libcrest/crest.h:198:46: note: in expansion of macro ‘__SKIP’
 EXTERN void __CrestUShort(unsigned short* x) __SKIP;
                                              ^~~~~~
./libcrest/crest.h:171:42: warning: ‘crest_skip’ attribute directive ignored [-Wattributes]
 #define __SKIP __attribute__((crest_skip))
                                          ^
./libcrest/crest.h:199:42: note: in expansion of macro ‘__SKIP’
 EXTERN void __CrestUInt(unsigned int* x) __SKIP;
                                          ^~~~~~
./libcrest/crest.h:171:42: warning: ‘crest_skip’ attribute directive ignored [-Wattributes]
 #define __SKIP __attribute__((crest_skip))
                                          ^
./libcrest/crest.h:200:34: note: in expansion of macro ‘__SKIP’
 EXTERN void __CrestChar(char* x) __SKIP;
                                  ^~~~~~
./libcrest/crest.h:171:42: warning: ‘crest_skip’ attribute directive ignored [-Wattributes]
 #define __SKIP __attribute__((crest_skip))
                                          ^
./libcrest/crest.h:201:36: note: in expansion of macro ‘__SKIP’
 EXTERN void __CrestShort(short* x) __SKIP;
                                    ^~~~~~
./libcrest/crest.h:171:42: warning: ‘crest_skip’ attribute directive ignored [-Wattributes]
 #define __SKIP __attribute__((crest_skip))
                                          ^
./libcrest/crest.h:202:32: note: in expansion of macro ‘__SKIP’
 EXTERN void __CrestInt(int* x) __SKIP;
                                ^~~~~~
libcrest/crest.cc: In function ‘void __CrestUShort(short unsigned int*)’:
libcrest/crest.cc:194:6: error: redefinition of ‘void __CrestUShort(short unsigned int*)’
 void __CrestUShort(unsigned short* x) {
      ^~~~~~~~~~~~~
libcrest/crest.cc:162:6: note: ‘void __CrestUShort(short unsigned int*)’ previously defined here
 void __CrestUShort(unsigned short* x) {
      ^~~~~~~~~~~~~
libcrest/crest.cc: In function ‘void __CrestUInt(unsigned int*)’:
libcrest/crest.cc:199:6: error: redefinition of ‘void __CrestUInt(unsigned int*)’
 void __CrestUInt(unsigned int* x) {
      ^~~~~~~~~~~
libcrest/crest.cc:167:6: note: ‘void __CrestUInt(unsigned int*)’ previously defined here
 void __CrestUInt(unsigned int* x) {
      ^~~~~~~~~~~
libcrest/crest.cc: In function ‘void __CrestChar(char*)’:
libcrest/crest.cc:204:6: error: redefinition of ‘void __CrestChar(char*)’
 void __CrestChar(char* x) {
      ^~~~~~~~~~~
libcrest/crest.cc:172:6: note: ‘void __CrestChar(char*)’ previously defined here
 void __CrestChar(char* x) {
      ^~~~~~~~~~~
libcrest/crest.cc: In function ‘void __CrestShort(short int*)’:
libcrest/crest.cc:209:6: error: redefinition of ‘void __CrestShort(short int*)’
 void __CrestShort(short* x) {
      ^~~~~~~~~~~~
libcrest/crest.cc:177:6: note: ‘void __CrestShort(short int*)’ previously defined here
 void __CrestShort(short* x) {
      ^~~~~~~~~~~~
libcrest/crest.cc: In function ‘void __CrestInt(int*)’:
libcrest/crest.cc:214:6: error: redefinition of ‘void __CrestInt(int*)’
 void __CrestInt(int* x) {
      ^~~~~~~~~~
libcrest/crest.cc:182:6: note: ‘void __CrestInt(int*)’ previously defined here
 void __CrestInt(int* x) {
      ^~~~~~~~~~
<builtin>: recipe for target 'libcrest/crest.o' failed
gmake: *** [libcrest/crest.o] Error 1
